Reactive relationship list

--- a/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step2.html
+++ b/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step2.html
@@ -3,8 +3,15 @@
   <!-- Add DataBlock from Module -->
   <div
     class="border-bottom ps-3 pt-3 mb-2 bg-light"
-    x-data="{creatingDataBlock:!formConfig.data_blocks.some(b => b.module!=''), newDataBlock:{module:'', text:''}}"
-  >
+    x-data="{
+      creatingDataBlock: !formConfig.data_blocks.some(b => b.module!=''), 
+      newDataBlock: {module:'', text:''},
+      async handleAddDatablockModule() {
+        formConfig.addDataBlockModule(this.newDataBlock.module, true, this.newDataBlock.text);
+        this.creatingDataBlock = false;
+        step2.loadDatablockRelationships();
+      },
+    }">
     <div class="row">
       <button type="button" class="btn w-auto" x-show="!creatingDataBlock" @click="creatingDataBlock=true;">
         [Añadir Bloque de Datos de Módulo]
@@ -19,8 +26,7 @@
                        x-effect="newDataBlock.text=formConfig.suggestDataBlockText(newDataBlock.module)" 
                        keydown.enter="$('#addDataBlockModuleButton').click();" 
                        keydown.esc="$('#cancelAddDataBlockModuleButton').click();"></stic-field-text>
-      <button type="button" class="btn w-32px mb-1px" id="addDataBlockModuleButton"
-              @click="formConfig.addDataBlockModule(newDataBlock.module, true, newDataBlock.text); creatingDataBlock = false;">
+      <button type="button" class="btn w-32px mb-1px" id="addDataBlockModuleButton" @click="handleAddDatablockModule();">
         <span class="suitepicon suitepicon-action-confirm"></span>
       </button>
       <button type="button" class="btn w-32px mb-1px" id="cancelAddDataBlockModuleButton" @click="creatingDataBlock = false;">
@@ -29,20 +35,16 @@
     </div>
   </div>
   <!-- Data Blocks -->
-  <div>
+  <div x-init="step2.loadDatablockRelationships();">
     <h3 class="mb-2" x-text="utils.translate('LBL_DATABLOCKS')+':'"></h3>
-    <div class="flex-fill border rounded p-2 overflow-auto" x-data ="{
-      createRelDataBlock(itemId){
-        DataBlockEditor.addRelationDataBlockEditor($('#dataBlockRelsEdit' + itemId), itemId);
-      }
-    }">
+    <div class="flex-fill border rounded p-2 overflow-auto">
       <!-- Main Content -->
       <template x-for="(item, key) in formConfig.data_blocks">
-        <div class="card" :x-data="{item: item, key: key}">
+        <div class="card">
           <div class="card-body">
             <div class="card-title">
               <div class="d-flex justify-content-between">
-                <h4 :id="'dataBlockTitleEdit-'+item.id" data-model="item.text" data-condition="item.editable_text" x-init="sticControls.editableText($el);"></h4>
+                <h4 :id="`dataBlockTitleEdit-${item.id}`" data-model="item.text" data-condition="item.editable_text" x-init="sticControls.editableText($el);"></h4>
                 <template x-if="'required' in item && typeof item.required === 'function' && !item.required()">
                   <span class="btn suitepicon suitepicon-action-delete" @click="deleteDataBlock(key);"></span>
                 </template>
@@ -54,27 +56,27 @@
 
             <div class="card-text">
               <!-- Fields Definition -->
-              <div :id="'dataBlockFields'+item.id">
+              <div :id="`dataBlockFields${item.id}`">
                 [Los campos del Bloque de datos]
                 <!-- Fields Details -->
                 <div x-data="{ showDataFieldsTable: false}">
-                  <div class="text-muted form-check form-switch mt-3" :id="'dataFieldsDetails'+item.name" 
+                  <div class="text-muted form-check form-switch mt-3" :id="`dataFieldsDetails${item.id}`" 
                        data-model="showDataFieldsTable" data-label-text="[Mostrar Detalle]" x-init="sticControls.fieldCheckbox($el);"></div>
                   <div class="card p-2 overflow-auto" x-show="showDataFieldsTable">
-                    <div class="mt-3" :id="'dataFieldsTable'+item.id" :data-objects="'item.fields'" x-init="sticControls.elemTableObjects($el);"></div>
+                    <div class="mt-3" :id="`dataFieldsTable${item.id}`" :data-objects="'item.fields'" x-init="sticControls.elemTableObjects($el);"></div>
                   </div>
                 </div>
                 <div x-effect="item.checkDataBlock()"></div>
               </div>
               <!-- Duplicate Definition -->
               <template x-if="item.module">
-                <div :id="'dataBlockDuplicates'+item.id">
+                <div :id="`dataBlockDuplicates${item.id}`">
                   <div class="row">
                     <!-- Action -->
-                    <div class="col-3" :id="'duplicateAction'+item.id" :data-model="'item.duplicate_detection.on_duplicate'" data-label="LBL_ONDUPLICATE_ACTION"
+                    <div class="col-3" :id="`duplicateAction${item.id}`" :data-model="'item.duplicate_detection.on_duplicate'" data-label="LBL_ONDUPLICATE_ACTION"
                          :data-map="utils.getList('stic_advanced_web_forms_datablocks_duplicate_action_list', true)" x-init="sticControls.fieldSelect($el)"></div>
                     <!-- Fields -->
-                    <div class="col-9" :id="'duplicateFields'+item.id" :data-model="'item.duplicate_detection.fields'" data-label="LBL_DUPLICATE_FIELDS"
+                    <div class="col-9" :id="`duplicateFields${item.id}`" :data-model="'item.duplicate_detection.fields'" data-label="LBL_DUPLICATE_FIELDS"
                          :data-map="`utils.getModuleInformation('${item.module}').fields`" data-map-property="text" data-multiple 
                          x-init="sticControls.fieldSelect($el)"></div>
                   </div>
@@ -82,16 +84,11 @@
               </template>
               <!-- Relationship Definition -->
               <template x-if="item.module">
-                <div :id="'dataBlockRels'+item.id" x-data="{
-                  datablockRelationships: [],
-                  async loadDatablockRelationships() {
-                      this.datablockRelationships = formConfig.getDatablockRelationships(item.id);
-                    },
-                }">
+                <div :id="`dataBlockRels${item.id}`">
                   [Las relaciones del Bloque de datos]
-                  <div class="mt-3" :id="'dataBlockRelsTable'+item.id" data-objects="datablockRelationships" 
-                       x-init="loadDatablockRelationships(); sticControls.elemTableObjects($el);"></div>
-
+                  <div class="mt-3" :id="`dataBlockRelsTable${item.id}`" 
+                       :data-objects="`step2.usedDatablockRelationships('${item.id}')`" x-init="sticControls.elemTableObjects($el);">
+                  </div>
                   <!-- Add Relationship -->
                   <div class="border-bottom ps-3 pt-3 mb-2 bg-light" x-data="{
                     creatingRelDataBlock: false, 
@@ -103,8 +100,8 @@
                     relNewDataBlock:false,
 
                     async loadRelations() {
-                      this.availableRels = formConfig.getAvailableRelationships(item.id);
-                      this.selectedRelName = this.availableRels.length>0 ? this.availableRels[0].name : '';
+                      this.availableRels = step2.unusedDatablockRelationships(item.id);
+                      this.selectedRelName = this.availableRels.length > 0 ? this.availableRels[0].name : '';
                       this.availableDataBlocks = [];
                       this.selectedDataBlockId = '';
                       this.creatingRelDataBlock = !this.creatingRelDataBlock;
@@ -117,13 +114,14 @@
                     },
                     async handleDataBlockChange() {
                       this.newDataBlockText = '';
-                      this.relNewDataBlock = this.selectedDataBlockId==-1;
-                      if(this.relNewDataBlock) {
+                      this.relNewDataBlock = this.selectedDataBlockId == -1;
+                      if (this.relNewDataBlock) {
                         this.newDataBlockText = formConfig.suggestDataBlockText(formConfig.getRelationshipModule(item.id, this.selectedRelName));
                       }
                     },
                     async handleCreateRelationship(){
                       formConfig.addDataBlockRelationship(item.id, this.selectedRelName, this.selectedDataBlockId, this.newDataBlockText);
+                      step2.loadDatablockRelationships();
                       this.creatingRelDataBlock = false;
                     },
                     }">
@@ -133,39 +131,32 @@
                       </button>
                       <h4 x-show="creatingRelDataBlock">[Añadir Relación con otro Bloque de Datos]</h4>
                     </div>
-                    <div :id="'dataBlockRelsEdit'+item.id" class="row align-items-end" x-show="creatingRelDataBlock">
+                    <div :id="`dataBlockRelsEdit${item.id}`" class="row align-items-end" x-show="creatingRelDataBlock">
                       <!-- Relationship -->
-                      <div class="col-3" :id="'dataBlockRelsEdit'+item.id+'_Rel'">
-                        <label :id="'dataBlockRelsEdit'+item.id+'_Rel_label'" :for="'dataBlockRelsEdit'+item.id+'_Rel_select'" class="form-label"
+                      <div class="col-3" :id="`dataBlockRelsEdit${item.id}_Rel`">
+                        <label :id="`dataBlockRelsEdit${item.id}_Rel_label`" :for="`dataBlockRelsEdit${item.id}_Rel_select`" class="form-label"
                               x-text="utils.translateForFieldLabel('LBL_RELATIONSHIP')"></label>
-                        <select :id="'dataBlockRelsEdit'+item.id+'_Rel_select'" class="form-select" x-model="selectedRelName" @change="handleRelationChange()">
+                        <select :id="`dataBlockRelsEdit${item.id}_Rel_select`" class="form-select" x-model="selectedRelName" @change="handleRelationChange()">
                           <template x-for="relation in availableRels" :key="relation.name">
                             <option :value="relation.name" x-text="relation.textExtended"></option>
                           </template>
                         </select>
                       </div>
                       <!-- Data Block -->
-                      <div class="col-3" :id="'dataBlockRelsEdit'+item.id+'_DataBlock'">
-                        <label :id="'dataBlockRelsEdit'+item.id+'_DataBlock_label'" :for="'dataBlockRelsEdit'+item.id+'_DataBlock_select'" class="form-label"
+                      <div class="col-3" :id="`dataBlockRelsEdit${item.id}_DataBlock`">
+                        <label :id="`dataBlockRelsEdit${item.id}_DataBlock_label`" :for="`dataBlockRelsEdit${item.id}_DataBlock_select`" class="form-label"
                               x-text="utils.translateForFieldLabel('LBL_DATABLOCK')"></label>
-                        <select :id="'dataBlockRelsEdit'+item.id+'_DataBlock_select'" class="form-select" x-model="selectedDataBlockId" @change="handleDataBlockChange()">
+                        <select :id="`dataBlockRelsEdit${item.id}_DataBlock_select`" class="form-select" x-model="selectedDataBlockId" @change="handleDataBlockChange()">
                           <template x-for="dataBlock in availableDataBlocks" :key="dataBlock.id">
                             <option :value="dataBlock.id" x-text="dataBlock.text"></option>
                           </template>
                         </select>
                       </div>
                       <!-- New Data Block -->
-                      <div class="col-3" :id="'dataBlockRelsEdit'+item.id+'_NewDatBlock'" x-show="relNewDataBlock">
-                        <label :id="'dataBlockRelsEdit'+item.id+'_NewDataBlock_label'" :for="'dataBlockRelsEdit'+item.id+'_NewDataBlock_input'" class="form-label"
+                      <div class="col-3" :id="`dataBlockRelsEdit${item.id}_NewDatBlock`" x-show="relNewDataBlock">
+                        <label :id="`dataBlockRelsEdit${item.id}_NewDataBlock_label`" :for="`dataBlockRelsEdit${item.id}_NewDataBlock_input`" class="form-label"
                                x-text="utils.translateForFieldLabel('LBL_NEW_DATABLOCK_NAME')"></label>
-                        <input :id="'dataBlockRelsEdit'+item.id+'_NewDataBlock_input'" type="text" class="form-control" 
-                               x-model="newDataBlockText" >
-                        <!-- <stic-field-text class="col-3" x-model="newDataBlock.text" label="LBL_NEW_DATABLOCK_NAME" 
-                        x-effect="newDataBlock.text=formConfig.suggestDataBlockText(newDataBlock.module)" 
-                        keydown.enter="$('#addDataBlockModuleButton').click();" 
-                        keydown.esc="$('#cancelAddDataBlockModuleButton').click();"
-                        @keydown.enter="editing=false;" @keydown.esc="editing=false;
-                        </stic-field-text> -->
+                        <input :id="`dataBlockRelsEdit${item.id}_NewDataBlock_input`" type="text" class="form-control" x-model="newDataBlockText" >
                       </div>
                       <button type="button" class="btn w-32px mb-1px" @click="handleCreateRelationship();">
                         <span class="suitepicon suitepicon-action-confirm"></span>
@@ -180,7 +171,7 @@
 
               <!-- Accordion Headers -->
               <template x-if="item.module">
-                <div :id="'dataDef_'+item.id"
+                <div :id="`dataDef_${item.id}`"
                      :data-sections="JSON.stringify([
                                       {headerText:`utils.translate('LBL_FIELDS') + ' ('+item.fields.length+')'`, selected:true, contentId:'dataBlockFields'+item.id},
                                       {headerText:`utils.translate('LBL_DUPLICATE_CHECK') + ' ('+item.duplicate_detection.fields.length+' - '+item.duplicate_detection.on_duplicate+')'`, selected:false, contentId:'dataBlockDuplicates'+item.id},
@@ -189,7 +180,7 @@
                      x-init="sticControls.accordion($el)"></div>
               </template>
               <template x-if="!item.module">
-                <div :id="'dataDef_'+item.id"
+                <div :id="`dataDef_${item.id}`"
                      :data-sections="JSON.stringify([
                                       {headerText:`utils.translate('LBL_FIELDS') + ' (' + item.fields.length +')'`, selected:true, contentId:'dataBlockFields'+item.id},
                                     ]);"
