--- a/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step1.html
+++ b/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step1.html
@@ -15,6 +15,7 @@
         data-call-back-function="set_wizard_assigned_user"
         data-field-to-name-array="{'id':'assigned_user_id', 'user_name':'assigned_user_name'}"
         data-mode="single"
+        required
         x-init="sticControls.fieldPopup($el)"
       ></div>
     </div>
