--- a/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step1.html
+++ b/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step1.html
@@ -1,4 +1,4 @@
-<form id="wizard-step1-form" style="width: 100%">
+<form id="wizard-step1-form" class="needs-validation" style="width: 100%">
   <div class="container">
     <div class="row">
       <!-- Name -->
