--- a/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step2.html
+++ b/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step2.html
@@ -129,10 +129,13 @@
                   item.fields.push(this.newField);
                   this.creatingField = false;
                 },
-                async provaActual(popup_reply_data) {
-                            this.newField.value = popup_reply_data.name_to_value_array.assigned_user_id;
-                            this.newField.value_text = popup_reply_data.name_to_value_array.assigned_user_name;
-                          },
+                async openPopUp(idBase){
+                  debugger;
+                  open_popup('Contacts', 600, 400, '', true, false, 
+                             { 'form_name': `dataBlockFieldEditForm${item.id}`,
+                               'field_to_name_array': {'id':`${idBase}_id${item.id}`, 'name':`${idBase}_name${item.id}`} },
+                             'single', true);
+                }
                 }">
                 <div class="row">
                   <button type="button" class="btn w-auto" x-show="!creatingField" @click="loadFields()">
@@ -141,115 +144,113 @@
                   <h4 x-show="creatingField">[Añadir Campo]</h4>
                 </div>
                 <div x-show="creatingField">
-                  <div class="row align-items-end">
-                    <!-- Field -->
-                    <div class="col-3">
-                      <label :for="`dataBlockFieldEdit${item.id}_Field_select`" class="form-label"
-                        x-text="utils.translateForFieldLabel('LBL_FIELD')"></label>
-                      <!-- Show all fields -->
-                      <div class="text-muted form-check form-switch small">
-                        <label :for="`dataBlockFieldEdit${item.id}_FieldAll_check`" class="form-label"
-                                x-text="utils.translateForFieldLabel('LBL_FIELDS_SHOW_ALL')"></label>
-                        <input class="form-check-input form-switch" type="checkbox" role="switch"
-                                :id="`dataBlockFieldEdit${item.id}_FieldAll_check`" x-model="showAllFields" @change="reloadFields()"/>
+                  <form :id="`dataBlockFieldEditForm${item.id}`" :name="`dataBlockFieldEditForm${item.id}`">
+                    <div class="row align-items-end">
+                      <!-- Field -->
+                      <div class="col-3">
+                        <label :for="`dbField_field${item.id}`" class="form-label"
+                          x-text="utils.translateForFieldLabel('LBL_FIELD')"></label>
+                        <!-- Show all fields -->
+                        <div class="text-muted form-check form-switch small">
+                          <label :for="`dbField_field_allcheck${item.id}`" class="form-label"
+                                  x-text="utils.translateForFieldLabel('LBL_FIELDS_SHOW_ALL')"></label>
+                          <input class="form-check-input form-switch" type="checkbox" role="switch"
+                                  :id="`dbField_field_allcheck${item.id}`" x-model="showAllFields" @change="reloadFields()"/>
+                        </div>
+                        <select :id="`dbField_field${item.id}`" class="form-select" x-model="newField.name" @change="handleFieldChange()">
+                          <template x-for="field in availableFields" :key="field.name">
+                            <option :value="field.name" x-text="field.text"></option>
+                          </template>
+                        </select>
                       </div>
-                      <select :id="`dataBlockFieldEdit${item.id}_Field_select`" class="form-select" x-model="newField.name" @change="handleFieldChange()">
-                        <template x-for="field in availableFields" :key="field.name">
-                          <option :value="field.name" x-text="field.text"></option>
-                        </template>
-                      </select>
-                    </div>
-                    <!-- Value type -->
-                    <div class="col-3">
-                      <label :for="`dataBlockFieldEdit${item.id}_ValueType_select`" class="form-label"
-                            x-text="utils.translateForFieldLabel('LBL_FIELD_VALUE_TYPE')"></label>
-                      <select :id="`dataBlockFieldEdit${item.id}_ValueType_select`" class="form-select" x-model="newField.value_type" @change="handleValueTypeChange()">
-                        <template x-for="type in availableValueTypes" :key="type.id">
-                          <option :value="type.id" x-text="type.text"></option>
-                        </template>
-                      </select>
-                    </div>
-                    <!-- Type in form -->
-                    <div class="col-3" x-show="availableTypesInForm.length > 1">
-                      <label :for="`dataBlockFieldEdit${item.id}_TypeF_select`" class="form-label"
-                            x-text="utils.translateForFieldLabel('LBL_FIELD_TYPE_IN_FORM')"></label>
-                      <select :id="`dataBlockFieldEdit${item.id}_TypeF_select`" class="form-select" x-model="newField.type_in_form" @change="handleTypeInFormChange()">
-                        <template x-for="type in availableTypesInForm" :key="type.id">
-                          <option :value="type.id" x-text="type.text"></option>
-                        </template>
-                      </select>
-                    </div>
-                    <!-- Value (fixed value of enum) -->
-                    <div class="col-3" x-show="fixedValueOfOptions">
-                      <label :for="`dataBlockFieldEdit${item.id}_ValueFixedOfOptions`" class="form-label"
-                            x-text="utils.translateForFieldLabel('LBL_FIELD_VALUE')"></label>
-                      <select :id="`dataBlockFieldEdit${item.id}_ValueFixedOfOptions`" class="form-select" x-model="newField.value" @change="handleValueChange()">
-                        <template x-for="option in newField.value_options" :key="option.id">
-                          <option :value="option.id" x-text="option.text"></option>
-                        </template>
-                      </select>
-                    </div>
-                    <!-- Value (fixed value of related) -->
-                    <div class="col-3 input-group">
-                      <label :for="`dataBlockFieldEdit${item.id}_ValueFixedOfRelated`" class="form-label"
-                             x-text="utils.translateForFieldLabel('LBL_FIELD_VALUE')"></label>
-                      <input class="form-control" type="text" :id="`dataBlockFieldEdit${item.id}_ValueFixedOfRelated`" x-model="newField.value_text" 
-                             autocomplete="off" @change="handleValueChange()" readonly/>
-                      <input type="hidden" :id="`dataBlockFieldEdit${item.id}_ValueFixedOfRelatedId`" x-model="newField.value" />
-                      <!-- IEPA!! Problema: Com cridar una funció de retorn?? -->
-                      <button class="btn" type="button" 
-                        @click="open_popup('Users', 600, 400, '', true, false, {
-                          'call_back_function': 'provaActual', 
-                          'field_to_name_array': {'id':'assigned_user_id', 'user_name':'assigned_user_name'}
-                        },'single', true);">
-                        <span class="suitepicon suitepicon-action-select"></span>
+                      <!-- Value type -->
+                      <div class="col-3">
+                        <label :for="`dbField_ValueType${item.id}`" class="form-label"
+                              x-text="utils.translateForFieldLabel('LBL_FIELD_VALUE_TYPE')"></label>
+                        <select :id="`dbField_ValueType${item.id}`" class="form-select" x-model="newField.value_type" @change="handleValueTypeChange()">
+                          <template x-for="type in availableValueTypes" :key="type.id">
+                            <option :value="type.id" x-text="type.text"></option>
+                          </template>
+                        </select>
+                      </div>
+                      <!-- Type in form -->
+                      <div class="col-3" x-show="availableTypesInForm.length > 1">
+                        <label :for="`dbField_TypeForm${item.id}`" class="form-label"
+                              x-text="utils.translateForFieldLabel('LBL_FIELD_TYPE_IN_FORM')"></label>
+                        <select :id="`dbField_TypeForm${item.id}`" class="form-select" x-model="newField.type_in_form" @change="handleTypeInFormChange()">
+                          <template x-for="type in availableTypesInForm" :key="type.id">
+                            <option :value="type.id" x-text="type.text"></option>
+                          </template>
+                        </select>
+                      </div>
+                      <!-- Value (fixed value of enum) -->
+                      <div class="col-3" x-show="fixedValueOfOptions">
+                        <label :for="`dbField_ValFixOptions${item.id}`" class="form-label"
+                              x-text="utils.translateForFieldLabel('LBL_FIELD_VALUE')"></label>
+                        <select :id="`dbField_ValFixOptions${item.id}`" class="form-select" x-model="newField.value" @change="handleValueChange()">
+                          <template x-for="option in newField.value_options" :key="option.id">
+                            <option :value="option.id" x-text="option.text"></option>
+                          </template>
+                        </select>
+                      </div>
+                      <!-- Value (fixed value of related) -->
+                      <div class="col-3 input-group">
+                        <label :for="`dbField_ValFixRel_name${item.id}`" class="form-label"
+                              x-text="utils.translateForFieldLabel('LBL_FIELD_VALUE')"></label>
+                        <input class="form-control" type="text" :id="`dbField_ValFixRel_name${item.id}`" :name="`dbField_ValFixRel_name${item.id}`" 
+                              x-model="newField.value_text" 
+                              autocomplete="off" @change="handleValueChange()" readonly/>
+                        <input type="hidden" :id="`dbField_ValFixRel_id${item.id}`" :name="`dbField_ValFixRel_id${item.id}`" x-model="newField.value" />
+                        <button class="btn" type="button" @click="openPopUp('dbField_ValFixRel')">
+                          <span class="suitepicon suitepicon-action-select"></span>
+                        </button>
+                        <button class="btn" type="button" @click="newField.value='';newField.value_text='';">
+                          <span class="suitepicon suitepicon-action-clear"></span>
+                        </button>
+                      </div>
+                      <!-- Value (fixed value) -->
+                      <div class="col-3" x-show="fixedValue && !fixedValueOfOptions">
+                        <label :for="`dbField_ValFixDate${item.id}`" class="form-label"
+                              x-text="utils.translateForFieldLabel('LBL_FIELD_VALUE')"></label>
+                        <input :id="`dbField_ValFixDate${item.id}`" :type="fixedType" class="form-control" x-model="newField.value" autocomplete="off" @change="handleValueChange()"/>
+                      </div>                    
+                      <!-- Value options -->
+                      <!-- <div class="col-3" x-show="newField.type_in_form == 'dropdown' && !fixedValueOfOptions">
+                        <label :for="`dbField_ValOptions${item.id}`" class="form-label"
+                              x-text="utils.translateForFieldLabel('LBL_FIELD_VALUE_OPTIONS')"></label>
+                        <select :id="`dbField_ValOptions${item.id}`" class="form-select" x-model="newField.value" @change="handleValueOptionsChange()">
+                          <template x-for="option in newField.value_options" :key="option.id">
+                            <option :value="option.id" x-text="option.text"></option>
+                          </template>
+                        </select>
+                      </div> -->
+                      <!-- Value Text-->
+                      <!-- <div class="col-3" x-show="mustInForm && !fixedValueOfOptions">
+                        <label :for="`dbField_ValText${item.id}`" class="form-label"
+                              x-text="utils.translateForFieldLabel('LBL_FIELD_VALUE_TEXT')"></label>
+                        <input :id="`dbField_ValText${item.id}`" type="text" class="form-control" x-model="newField.value_text" >
+                      </div> -->
+                      <!-- Label -->
+                      <div class="col-3" x-show="mustInForm">
+                        <label :for="`dbField_Label${item.id}`" class="form-label"
+                              x-text="utils.translateForFieldLabel('LBL_FIELD_LABEL')"></label>
+                        <input :id="`dbField_Label${item.id}`" type="text" class="form-control" x-model="newField.label" >
+                      </div>
+                      <!-- Required in form -->
+                      <div class="col-2 form-switch" x-show="mustInForm">
+                        <label :for="`dbField_ReqForm${item.id}`" class="form-label"
+                              x-text="utils.translateForFieldLabel('LBL_FIELD_REQUIRED_IN_FORM')"></label>
+                        <input class="form-check-input form-switch" type="checkbox" role="switch"
+                              :id="`dbField_ReqForm${item.id}`" x-model="newField.required_in_form"/>
+                      </div>
+                      <button type="button" class="btn w-32px mb-1px" @click="handleCreateField();">
+                        <span class="suitepicon suitepicon-action-confirm"></span>
                       </button>
-                      <button class="btn" type="button" @click="newField.value='';newField.value_text='';">
+                      <button type="button" class="btn w-32px mb-1px" @click="creatingField = false;">
                         <span class="suitepicon suitepicon-action-clear"></span>
                       </button>
                     </div>
-                    <!-- Value (fixed value) -->
-                    <div class="col-3" x-show="fixedValue && !fixedValueOfOptions">
-                      <label :for="`dataBlockFieldEdit${item.id}_ValueFixedOfDate`" class="form-label"
-                            x-text="utils.translateForFieldLabel('LBL_FIELD_VALUE')"></label>
-                      <input :id="`dataBlockFieldEdit${item.id}_ValueFixedOfDate`" :type="fixedType" class="form-control" x-model="newField.value" autocomplete="off" @change="handleValueChange()"/>
-                    </div>                    
-                    <!-- Value options -->
-                    <!-- <div class="col-3" x-show="newField.type_in_form == 'dropdown' && !fixedValueOfOptions">
-                      <label :for="`dataBlockFieldEdit${item.id}_ValueOptions_select`" class="form-label"
-                            x-text="utils.translateForFieldLabel('LBL_FIELD_VALUE_OPTIONS')"></label>
-                      <select :id="`dataBlockFieldEdit${item.id}_ValueOptions_select`" class="form-select" x-model="newField.value" @change="handleValueOptionsChange()">
-                        <template x-for="option in newField.value_options" :key="option.id">
-                          <option :value="option.id" x-text="option.text"></option>
-                        </template>
-                      </select>
-                    </div> -->
-                    <!-- Value Text-->
-                    <!-- <div class="col-3" x-show="mustInForm && !fixedValueOfOptions">
-                      <label :for="`dataBlockFieldEdit${item.id}_ValueText_text`" class="form-label"
-                            x-text="utils.translateForFieldLabel('LBL_FIELD_VALUE_TEXT')"></label>
-                      <input :id="`dataBlockFieldEdit${item.id}_ValueText_text`" type="text" class="form-control" x-model="newField.value_text" >
-                    </div> -->
-                    <!-- Label -->
-                    <div class="col-3" x-show="mustInForm">
-                      <label :for="`dataBlockFieldEdit${item.id}_Label_input`" class="form-label"
-                            x-text="utils.translateForFieldLabel('LBL_FIELD_LABEL')"></label>
-                      <input :id="`dataBlockFieldEdit${item.id}_Label_input`" type="text" class="form-control" x-model="newField.label" >
-                    </div>
-                    <!-- Required in form -->
-                    <div class="col-2 form-switch" x-show="mustInForm">
-                      <label :for="`dataBlockFieldEdit${item.id}_ReqF_check`" class="form-label"
-                            x-text="utils.translateForFieldLabel('LBL_FIELD_REQUIRED_IN_FORM')"></label>
-                      <input class="form-check-input form-switch" type="checkbox" role="switch"
-                            :id="`dataBlockFieldEdit${item.id}_ReqF_check`" x-model="newField.required_in_form"/>
-                    </div>
-                    <button type="button" class="btn w-32px mb-1px" @click="handleCreateField();">
-                      <span class="suitepicon suitepicon-action-confirm"></span>
-                    </button>
-                    <button type="button" class="btn w-32px mb-1px" @click="creatingField = false;">
-                      <span class="suitepicon suitepicon-action-clear"></span>
-                    </button>
-                  </div>
+                  </form>
                 </div>
               </div>
             </div>
