--- a/custom/modules/EmailTemplates/EditView.html
+++ b/custom/modules/EmailTemplates/EditView.html
@@ -130,10 +130,17 @@ STIC#368 -->
 						</td>
 					</tr>
 					<tr>
-						<td colspan="4">
-							&nbsp;
+						<td width="15%" scope="row">
+							{MOD.LBL_ASSIGNED_TO_ID}
+						</td>
+						<td>
+							<input type="hidden" name="assigned_user_id" id="assigned_user_id" value="{ASSIGNED_USER_ID}">
+							<input class="sqsEnabled" autocomplete="off" type="text" name="assigned_user_name" id="assigned_user_name" value="{ASSIGNED_USER_NAME}">
+							<button type="button" name="btn_assigned_user_name" id="btn_assigned_user_name" tabindex="0" class="button firstChild" style="line-height:0" onclick='open_popup("Users", 600, 400, "", true, false, {"call_back_function":"set_return","form_name":"EditView","field_to_name_array":{"id":"assigned_user_id","user_name":"assigned_user_name"}}, "single", true);'><span class="suitepicon suitepicon-action-select"></span></button>
+							<button type="button" name="btn_clr_assigned_user_name" id="btn_clr_assigned_user_name" tabindex="0" title="{LBL_ACCESSKEY_CLEAR_USERS_TITLE}" class="button lastChild" style="line-height:0" onclick="SUGAR.clearRelateField(this.form, 'assigned_user_name', 'assigned_user_id');" value="{LBL_ACCESSKEY_CLEAR_USERS_TITLE}"><span class="suitepicon suitepicon-action-clear"></span></button>
 						</td>
 					</tr>
+					
 <!-- BEGIN: NoInbound -->
 					<tr>
 						<td width="15%" scope="row" align='left'>
